// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeFetchInit add "Authorization: Token " to header 1`] = `
Object {
  "credentials": "include",
  "headers": Object {
    "Authorization": "Token @@unit test@@",
  },
  "method": "GET",
}
`;

exports[`makeFetchInit add "Content-Type: application/json; charset=utf-8" to header 1`] = `
Object {
  "credentials": "include",
  "headers": Object {
    "Content-Type": "application/json; charset=utf-8",
  },
  "method": "GET",
}
`;

exports[`makeFetchInit custom method with POST 1`] = `
Object {
  "credentials": "include",
  "headers": Object {},
  "method": "POST",
}
`;

exports[`makeFetchInit no argument 1`] = `
Object {
  "credentials": "include",
  "headers": Object {},
  "method": "GET",
}
`;

exports[`makeFetchInit should not include credential 1`] = `
Object {
  "headers": Object {},
  "method": "GET",
}
`;
